# python-training

./: README.md  pyproject.toml
.github/workflows/: ruff.yaml
python_training/: config.py  eval.py  setup.ipynb  setup.py  test.ipynb  zlabs.ipynb
python_training/config/: README.md  base_script.py  base_solution.py  classes.json  comprehensions.json  config.json  debugging.json  functional_programming.json  functions.json  generators.json  iteration.json  topics.json  type_hinting.json
python_training/evaluate/automation_projects/: test_00_files.py  test_01_emails.py
python_training/evaluate/basic_syntax_and_data_types/: test_00_variables.py  test_01_strings.py  test_02_numerics.py  test_03_booleans.py
python_training/evaluate/control_flow/: test_00_if_else.py  test_01_loops.py  test_02_break_and_continue.py
python_training/evaluate/data_structures/: test_00_lists.py  test_01_tuples.py  test_02_sets.py
python_training/evaluate/exception_handling/: test_03_custom.py
python_training/evaluate/functional_programming/: test_03_lambda.py
python_training/evaluate/functions_and_modules/: test_00_defining.py  test_01_arguments.py  test_03_import.py
python_training/evaluate/object_oriented_programming/: test_01_objects.py  test_02_methods.py  test_03_inheritance.py
python_training/evaluate/type_hinting/: test_01_annotations.py  test_02_checking.py
python_training/solutions/automation_projects/: test_00_files.py  test_01_emails.py  test_02_data.py  test_03_projects.py
python_training/solutions/basic_syntax_and_data_types/: test_00_variables.py  (+9 more)
(+67 files in other folders)
