[tool.poetry]
name = "python-training"
version = "0.1.0"
description = ""
authors = ["lucas-nelson-uiuc <lucas.nelson.uiuc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
